--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -19,7 +19,8 @@
 
 /* Global Colors - The following color variables are used throughout the website. Updating them here will change the color scheme of the entire website */
 :root { 
-  --background-color: #070708; /* Background color for the entire website, including individual sections */
+  /* O último número (0.85) é a opacidade. Vai de 0 (invisível) a 1 (sólido) */
+  --background-color: rgba(7, 7, 8, 0.9); /* Background color for the entire website, including individual sections */
   --default-color: rgba(255, 255, 255, 0.8); /* Default color used for the majority of the text content across the entire website */
   --heading-color: #ffffff; /* Color for headings, subheadings and title throughout the website */
   --accent-color: #008870; /* Accent color that represents your brand on the website. It's used for buttons, links, and other elements that need to stand out */
@@ -45,7 +46,7 @@
 }
 
 .dark-background {
-  --background-color: #060606;
+  --background-color: rgba(7, 7, 8, 0.9);
   --default-color: #ffffff;
   --heading-color: #ffffff;
   --surface-color: #252525;
@@ -64,6 +65,15 @@ body {
   color: var(--default-color);
   background-color: var(--background-color);
   font-family: var(--default-font);
+
+  /* --- CORREÇÃO AQUI --- */
+  /* O .. sai da pasta css, entra em img, entra em bg e pega o arquivo webp */
+  background-image: url("../img/bg/abstract-bg-3.webp"); 
+  
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed; /* Isso faz a imagem ficar fixa no fundo */
+  background-repeat: no-repeat;
 }
 
 a {
@@ -281,6 +291,7 @@ h6 {
 /* Removemos o ::before antigo para não dar conflito */
 .hero .hero-background::before {
   display: none;
+  background-image: url("../img/bg/abstract-bg-3.webp");
 }
 
   .navmenu .dropdown ul {
